--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-MODEL=llama3.2
-CHAT_URL=http://localhost:11434/api
+# Replace with your actual OpenAI API key
+API_KEY=
+CHAT_URL=
+PROVIDER=
+MODEL=
