--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gai-commit"  # Changed to a more unique name
-version = "0.1.0"
+version = "0.0.0b1"
 authors = [
     { name = "Muzahid", email = "mmsaddam@gmail.com" },
 ]
