--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,15 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "gai-commit"  # Changed to a more unique name
-version = "0.0.0b1"
+name = "gai-commit"
+version = "0.1.0"
 authors = [
     { name = "Muzahid", email = "mmsaddam@gmail.com" },
 ]
 description = "An AI-powered git commit message generator."
 readme = "README.md"
 requires-python = ">=3.8"
+license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -29,4 +30,4 @@ dependencies = [
 "Bug Tracker" = "https://github.com/muzahid59/gai/issues"
 
 [project.scripts]
-gai = "gai.cli:main"  # Keep the CLI command as 'gai'
+gai = "gai.cli:main"
